# FaceRecognition

./: CMakeLists.txt  Makefile  android_build_armv7.sh  android_build_armv8.sh  face_test.cpp  linux_build_armv7.sh  linux_build_armv8.sh  linux_build_x86.sh  main.cpp
facecaffe/: age_gender.cpp_  caffe_mtcnn.cpp  comm_lib.cpp  facerecognize.cpp  mobilefacenet.cpp  vanface.cpp
include/: age_gender.hpp  caffe_mtcnn.hpp  comm_lib.hpp  facerecognize.hpp  mobilefacenet.hpp  mtcnn.hpp  vanface.hpp
java/: CMakeLists.txt
java/com/facerecognize/: FaceBox.java  FaceRecognize.java
java/jni/: FaceRecognize.cpp  android_buf.cpp  android_buf.hpp  dll-main.cpp
